# autonomous_car

./: README.md
control/sdv_localization/: topics2save.txt
control/sdv_localization/sdv_localization/: CMakeLists.txt  package.xml
control/sdv_localization/sdv_localization/config/: mapper_params_offline.yaml
control/sdv_localization/sdv_localization/config/sbg/: ellipse_D_uart_car.yaml
control/sdv_localization/sdv_localization/launch/: planner.launch.py  real_time_mapping.launch.py  sdv_localization.launch.py
control/sdv_localization/sdv_localization/launch/rviz_cfg/: sdv_anniversary.rviz  sdv_parking_lot_cetec.rviz  sdv_parking_lot_cetec2.rviz
control/sdv_localization/sdv_localization/launch/sensors/: sbg_device_launch.py  sbg_device_mag_calibration_launch.py  velodyne_hdl32e.launch.py
control/sdv_localization/sdv_localization/maps/: carreta_map.yaml  carreta_raw_map.yaml  raw_map.yaml
control/sdv_localization/sdv_localization/scripts/: path_amcl.py  save2csv.py  waypoint_recorder_node.py
control/sdv_localization/sdv_localization/src/: gps_pose.cc  sbg_processing.cc  temp_tf_odom_map_pub.cc  vn_processing.cc
interfaces/lidar_msgs/: CMakeLists.txt  package.xml
interfaces/lidar_msgs/msg/: ObstacleData.msg
interfaces/sdv_can/launch/: can_devices.launch.py
lidar_algorithms/convex_hull_operation/: CMakeLists.txt  package.xml
lidar_algorithms/convex_hull_operation/launch/: convex_display.launch.py
lidar_algorithms/convex_hull_operation/scripts/: convex_hull_op.py
lidar_algorithms/frenet_frame/: CMakeLists.txt  package.xml
lidar_algorithms/frenet_frame/launch/: franet_frame.launch.py
lidar_algorithms/frenet_frame/src/: FranetFrame.cpp  frenet_utils.cpp  frenet_utils.hpp  polynomial.cpp
lidar_algorithms/frenet_frame/versions/: a.cpp  franet_frame_version1.cpp
lidar_algorithms/lidar3d_clustering/: CMakeLists.txt
lidar_algorithms/lidar3d_clustering/config/: detection_variables.yaml
lidar_algorithms/lidar3d_clustering/launch/: lidar3d.launch.py
lidar_algorithms/lidar3d_clustering/src/: HungarianTracker.cpp  HungarianTracker.hpp  ObjectDetection.cpp  bbox.hpp  obstacle_detector.hpp  obstacle_detector_2.hpp
lidar_algorithms/lidar3d_clustering/verions_2/: ObjectDetection_V4.cpp  ObjectDetection_V5.cpp  ObjectDetection_V6.cpp
lidar_algorithms/lidar_ground_getter/: CMakeLists.txt
lidar_algorithms/lidar_ground_getter/config/: param.yaml
lidar_algorithms/optimal_planner_lidar/: CMakeLists.txt  package.xml
lidar_algorithms/optimal_planner_lidar/versions/: v1.cpp  (+1 more)
lidar_algorithms/test_lidar/: CMakeLists.txt  package.xml
lidar_algorithms/voxel_grid_filter/: CMakeLists.txt
lidar_camara_fusion/: camera_info_memo_camara.yaml
lidar_camara_fusion/pointscloud_detector/: CMakeLists.txt
lidar_camara_fusion/yolov8_niagara/: CMakeLists.txt
mapping_localization/: pcb_map_rotation.py
sdv_launch/: CMakeLists.txt  package.xml
sdv_launch/config/: localization.yaml
sdv_launch/launch/: control.launch.py  lidar_algorithms.launch.py  localization.launch.py  sensors.launch.py
sdv_robot_description/launch/: display.launch.py
sdv_robot_description/urdf/: Autoreifen.xacro  golf_car.urdf  hook.urdf  robot.urdf  sdv_car.urdf  test_lidar_camara.urdf  zf_car.urdf
sensors/sensors_launch/: CMakeLists.txt
waypoints/waypoints_calculations/: CMakeLists.txt
(+32 files in other folders)
